this method is not supposed to throw, fdo#66241

Change-Id: I1e2eaeba47e16e6b261c4c382ec10166eb08d7f3